# ice-nine

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml  flake.nix  justfile  lake-manifest.json  lakefile.lean
.github/workflows/: book.yml  ci.yml
docs/: 000_overview.md  001_algebra.md  002_keygen.md  003_signing.md  004_verification.md  005_extensions.md  00_overview.md  01_algebra.md  02_keygen.md  03_signing.md  04_verification.md  05_extensions.md  06_integration.md  100_configuration.md  SUMMARY.md
docs/blog/: 000_threshold_dilithium.md
docs/specs/: 000_overview.md  001_algebra.md  003_signing.md  005_extensions.md  100_configuration.md  999_references.md
lean/: IceNine.lean
lean/IceNine/: Crypto.lean  Instances.lean  Norms.lean  Samples.lean
lean/IceNine/Protocol/: Core.lean  DKGCore.lean  DKGThreshold.lean  Dealer.lean  Error.lean  Lagrange.lean  Phase.lean  PhaseHandlers.lean  PhaseIndexed.lean  PhaseMerge.lean  PhaseSig.lean  Refresh.lean  RefreshCoord.lean  RefreshDKG.lean  RefreshState.lean  Repair.lean  RepairCoord.lean  Rerandomize.lean  Secret.lean  Serialize.lean  Sign.lean  SignCore.lean  SignSession.lean  SignThreshold.lean  SignTypes.lean  StateProduct.lean  ThresholdMerge.lean  VSS.lean  VSSCore.lean
lean/IceNine/Security/: Assumptions.lean  Coordination.lean  Correctness.lean  DKG.lean  HighBits.lean  Lagrange.lean  Phase.lean  Repair.lean  (+5 more)
specs/: 00_overview.md  01_algebra.md  02_keygen.md  03_signing.md  04_verification.md  05_extensions.md  06_assumptions.md
src/: lib.rs
work/: sketch.md  verification.md  verification_2.md
(+77 files in other folders)
