[package]
name = "ice-nine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cryptographic protocol implementation with formal verification"
license = "MIT"
repository = "https://github.com/yourusername/ice-nine"

[dependencies]
# Cryptographic primitives
sha2 = "0.10"
blake3 = "1.5"
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (optional, remove if not needed)
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "protocol_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
